force-app/main/default/objects/HSE_Incident__c/HSE_Incident__c.object-meta.xml
<CustomObject>
    <label>HSE Incident</label>
    <nameField>
    <label>HSE Incident</label>
    <description>Records Health, Safety & Environment incidents such as spills, injuries, and near-misses with severity classification and regulatory reporting flags.</description>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>HSE Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>