force-app/main/default/objects/HSE_Incident__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HSE Incidents</relationshipLabel>
    <relationshipName>HSE_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>