force-app/main/default/objects/HSE_Incident__c/fields/Environmental_Impact__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Impact__c</fullName>
    <label>Environmental Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>