force-app/main/default/objects/HSE_Incident__c/fields/Fatality_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Fatality_Occurred__c</fullName>
    <label>Fatality Occurred</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>