force-app/main/default/objects/HSE_Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spill</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Explosion</fullName>
            </value>
            <value>
                <fullName>Safety Near Miss</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>