force-app/main/default/objects/HSE_Incident__c/fields/Injury_Type__c.field-meta.xml
<CustomField>
    <fullName>Injury_Type__c</fullName>
    <label>Injury Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Medical Treatment</fullName>
            </value>
            <value>
                <fullName>Lost Time</fullName>
            </value>
            <value>
                <fullName>Life-Threatening</fullName>
            </value>
            <value>
                <fullName>Permanent Disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>