force-app/main/default/objects/HSE_Incident__c/fields/LTI__c.field-meta.xml
<CustomField>
    <fullName>LTI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LTI</label>
    <type>Checkbox</type>
</CustomField>