force-app/main/default/objects/HSE_Incident__c/fields/Recordable__c.field-meta.xml
<CustomField>
    <fullName>Recordable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recordable</label>
    <type>Checkbox</type>
</CustomField>