force-app/main/default/objects/HSE_Incident__c/fields/Regulatory_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Reportable</label>
    <type>Checkbox</type>
</CustomField>