force-app/main/default/objects/HSE_Incident__c/fields/Retail_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Retail_Outlet__c</fullName>
    <label>Retail Outlet</label>
    <referenceTo>Retail_Outlet__c</referenceTo>
    <relationshipLabel>HSE Incidents</relationshipLabel>
    <relationshipName>HSE_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>