force-app/main/default/objects/HSE_Incident__c/fields/Spill_Volume__c.field-meta.xml
<CustomField>
    <fullName>Spill_Volume__c</fullName>
    <label>Spill Volume (bbls)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>