force-app/main/default/objects/HSE_Incident__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>HSE Incidents</relationshipLabel>
    <relationshipName>HSE_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>