force-app/main/default/objects/HSE_Incident__c/validationRules/Require_Corrective_Action_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Corrective_Action_When_Closed</fullName>
    <active>true</active>
    <description>Closed incidents must have a corrective action documented.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp; ISBLANK(Corrective_Action__c)</errorConditionFormula>
    <errorMessage>Corrective Action is required before closing an incident.</errorMessage>
</ValidationRule>