force-app/main/default/objects/HSE_Incident__c/validationRules/Require_Incident_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Incident_Date</fullName>
    <active>true</active>
    <description>Incident Date is required when creating or updating an incident.</description>
    <errorConditionFormula>ISBLANK(Incident_Date__c)</errorConditionFormula>
    <errorMessage>Incident Date is required.</errorMessage>
</ValidationRule>