force-app/main/default/objects/HSE_Incident__c/validationRules/Spill_Volume_Required_When_Spill.validationRule-meta.xml
<ValidationRule>
    <fullName>Spill_Volume_Required_When_Spill</fullName>
    <active>true</active>
    <description>Spill volume must be provided for spill incidents.</description>
    <errorConditionFormula>ISPICKVAL(Incident_Type__c, &apos;Spill&apos;) &amp;&amp; ISBLANK(Spill_Volume__c)</errorConditionFormula>
    <errorMessage>Spill Volume is required for spill-type incidents.</errorMessage>
</ValidationRule>